--- a/src/app/travel/gl/index.html
+++ b/src/app/travel/gl/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>example/template</title>
+    <link rel="stylesheet" href="../../../assets/third-party/bootstrap/css/bootstrap.css">
+    <title>桂林</title>
 </head>
 <body>
-    <%= require('./partial/header.tpl')({
-        message:'hello world'
-    }) %>
+    <div class="container">
+        <div class="page-header">
+            <h1>桂林 <small>2017.8.20 - 2017.8.26</small></h1>
+        </div>
+        <div id="app">
 
-    <pre>
-        <%= require('./partial/header.tpl')({
-            message:'hello world'
-        }) %>
-    </pre>
+        </div>
+    </div>
 </body>
 </html>
