--- a/src/app/index/index.html
+++ b/src/app/index/index.html
@@ -5,17 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../../assets/third-party/bootstrap/css/bootstrap.css">
-    <title>桂林</title>
+    <title>index</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="page-header">
-            <h1>桂林 <small>2017.8.20 - 2017.8.26</small></h1>
-        </div>
-        <div id="app">
-
-        </div>
-    </div>
+<a href="/travel/gl.html">桂林计划</a>
 </body>
 </html>
