给阿梅做了一个项目分配计算器

--- a/src/app/lfm/xiangmujisuanqi/index.html
+++ b/src/app/lfm/xiangmujisuanqi/index.html
@@ -9,6 +9,11 @@
     <title>项目计算器</title>
 </head>
 <body>
-<div id="app"></div>
+<div class="container-fluid">
+    <div class="page-header">
+        <h1>阿梅的计算器</h1>
+    </div>
+    <div id="app"></div>
+</div>
 </body>
 </html>
